syntax = "proto3";

package Protocol;

import "struct.proto";
import "enum.proto";

// 캐릭터 위치 동기화
message C2B_PlayerPositionUpdateRequest 
{
    PosInfo posInfo = 1;
    string parameter = 2;
    bool state = 3;
    int32 roomId = 4;
}

// 캐릭터 위치 동기화 알림
message B2C_PlayerPositionUpdateNotification 
{
    PosInfo posInfo = 1;
    string parameter = 2;
    bool state = 3;
}

// 카드 사용
message C2B_UseCardRequest { 
    int32 roomId = 1;
    string cardId = 2; 
}

